# flights_search

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/engage/: agent.py  env.yaml  main.py  prompt.py  schema.py
agents/filter/: agent.py  main.py  prompt.py  schema.py
agents/filter_smart/: agent.py  agent2.py  env.yaml  main.py  prompt.py  schema.py
agents/flights_search/: agent.py  main.py  prompt.py  schema.py
agents/inspiration/: agent.py  env.yaml  main.py  prompt.py  schema.py
agents/json_parser/: agent.py  main.py  prompt.py  schema.py
agents/orchestrator/: main.py  schema.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  ChatWidget.jsx  index.css
skills/ui_conversational_widget/: SKILL.md
skills/ui_flights_search/: SKILL.md
tests/engage/: test.py  tests.json
tests/filter/: test.py  tests.json
tests/filter_smart/: test.py  tests.json
tests/flights_search/: test.py
tests/inspiration/: test.py
tests/json_parser/: test.py  tests.json
tests/orchestrator/: test.py  tests.json
utils/: logging.py
