[project]
name = "flights-search"
version = "0.1.0"
description = "Repository for flights search agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.42.0",
    "google-adk==1.27.2",
    "pydantic==2.12.5",
    "PyYAML==6.0.3",
    "google-genai==1.68.0",
    "langchain==1.2.13",
    "langgraph==1.1.3",
    "requests==2.32.5",
]


[dependency-groups]
dev = [
    "pytest==9.0.2",
]

